<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="ir.sq.apps.squserside.activities.UserProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_centerHorizontal="true"
            android:background="@color/primaryColor"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/profile_image"
                app:civ_border_color="#fdd835"
                app:civ_border_width="2dp"
                app:civ_fill_color="#FFF" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="185dp"
            android:minWidth="150dp"
            app:cardBackgroundColor="#fdd835"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balance_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:text="150000 تومان"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/balance_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_title_string"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/name_title_string" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#FFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="15dp"
                    android:text="محمد تابع امام"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/user_name_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/user_name_title_string" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#FFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/user_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:padding="15dp"
                    android:text="m.tabeemam"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/email_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/email_title_string" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#FFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:padding="15dp"
                    android:text="m.tabeeemam@gmail.com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
